--- a/DataExploration.ipynb
+++ b/DataExploration.ipynb
@@ -2109,15 +2109,15 @@
    "source": [
     "### What is the structure of your dataset?\n",
     "\n",
-    "> Your answer here!\n",
+    "> This dataset is structered in 81 columns by 113937 rows. The columns are various variables related to the loan process.\n",
     "\n",
     "### What is/are the main feature(s) of interest in your dataset?\n",
     "\n",
-    "> Your answer here!\n",
+    "> Some main features that I am interested in in this dataset are which factors affect a loan's outcome status, what factors affect interest rate, and what types of differences occur when the loan is a large amount.\n",
     "\n",
     "### What features in the dataset do you think will help support your investigation into your feature(s) of interest?\n",
     "\n",
-    "> Your answer here!"
+    "> I think the features that will support this investigation the most are the APR, credit score, total loans, and stated income. These variables should have a relationship with the success of the loan."
    ]
   },
   {
