--- a/DataExploration.ipynb
+++ b/DataExploration.ipynb
@@ -997,7 +997,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### We can see that there seems to be more relatively low amount unsuccessful loans vs the successful loans.\n",
+    "#### We can see that there seems to be more relatively low dollar amount unsuccessful loans vs the successful loans.\n",
     "\n",
     "> We can look into what features might make a loan successful vs unsuccessful, starting with credit grade."
    ]
